Quorum/Library/Tests/Templating/Pass/PassBooleanTakesBoolean_5.quorum
class Main
    action Main
        Test<boolean> something
        something:doSomething(true)
    end
end