Quorum/Library/Tests/Templating/Fail/PassNumberTakesInteger_2.quorum
class main
    action Main
        Test<integer> something
        something:doSomething(7.5)
    end
end